src/atn/snapshots/antlr4_runtime__atn__parser__tests__adaptive_predict_marks_sll_conflict_for_full_context.snap
---
source: src/atn/parser.rs
expression: prediction
---
ParserAtnPrediction {
    alt: 1,
    requires_full_context: true,
    has_semantic_context: false,
    diagnostic: Some(
        ParserAtnPredictionDiagnostic {
            kind: Ambiguity,
            start_index: 0,
            sll_stop_index: 0,
            ll_stop_index: 0,
            conflicting_alts: [
                1,
                2,
            ],
            exact: false,
        },
    ),
}
